--- a/catalogue/src/main/resources/application-dev.properties
+++ b/catalogue/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://docker-mysql:3306/casestudy
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/casestudy
 spring.application.name=catalogue-service
-spring.datasource.url=jdbc:mysql://localhost:3306/casestudy
+#spring.datasource.url=jdbc:mysql://localhost:3306/casestudy
 spring.datasource.username=myuser
 spring.datasource.password=mypass123
 server.port=8090
