--- a/catalogue/src/main/resources/application.properties
+++ b/catalogue/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.profiles.active=test
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 server.error.include-stacktrace=never
