latest changes as per price api

--- a/catalogue/src/main/resources/application.properties
+++ b/catalogue/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.profiles.active=test
-eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://ec2-15-207-1-186.ap-south-1.compute.amazonaws.com:8761/eureka/
 server.error.include-stacktrace=never
