Second Commit with Offer API

--- a/Offer/src/main/resources/application.properties
+++ b/Offer/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=htwo
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-server.servlet.context-path=/offers
 server.port=8090
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
-
+#spring.jpa.hibernate.ddl-auto=create
+eureka.client.service-url.defaultZone=http://ec2-15-207-1-186.ap-south-1.compute.amazonaws.com:8761/eureka/
+spring.application.name=OFFER-SERVICE
+spring.h2.console.settings.web-allow-others=true
