--- a/Price/pom.xml
+++ b/Price/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>Price</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Price</name>
+	<packaging>jar</packaging>
 	<description>This API will help us to get the price details</description>
 
 	<properties>
@@ -33,8 +34,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!-- <dependency> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId> 
-			</dependency> -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
