--- a/Price/src/main/resources/application.properties
+++ b/Price/src/main/resources/application.properties
@@ -3,7 +3,13 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=htwo
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-server.servlet.context-path=/price-api
 server.port=8089
 spring.h2.console.enabled=true
-offer.url=http://localhost:8090/offers/
+offer.url=http://offer-api.cfapps.io/offers/
+eureka.client.service-url.defaultZone=http://ec2-15-207-1-186.ap-south-1.compute.amazonaws.com:8761/eureka/
+spring.application.name=PRICE-SERVICE
+#spring.jpa.generate-ddl= false
+#spring.jpa.hibernate.ddl-auto=validate
+spring.h2.console.settings.web-allow-others=true
+
+
