--- a/catalogue/Dockerfile-eureka
+++ b/catalogue/Dockerfile-eureka
@@ -1,5 +1,6 @@
-FROM adoptopenjdk/openjdk13:alpine-slim
-WORKDIR /
+FROM openjdk:8-jdk-alpine
+WORKDIR /data
 ADD EurekaServer-0.0.1-SNAPSHOT.jar EurekaServer-0.0.1-SNAPSHOT.jar
 EXPOSE 8761
 ENTRYPOINT ["java", "-jar", "EurekaServer-0.0.1-SNAPSHOT.jar"]
+
