--- a/Offer/src/main/resources/application.properties
+++ b/Offer/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.h2.console.enabled=true
 eureka.client.service-url.defaultZone=http://ec2-15-207-1-186.ap-south-1.compute.amazonaws.com:8761/eureka/
 spring.application.name=OFFER-SERVICE
 spring.h2.console.settings.web-allow-others=true
+#management.endpoints.web.exposure.include=refresh
+eureka.client.healthcheck.enabled=true
+info.app.name=Offer Service API
+info.app.description=API help us to get the offer details
+info.app.version=1.0.0
+eureka.instance.status-page-url=http://offer-api.cfapps.io/actuator/info
+eureka.instance.health-check-url=http://offer-api.cfapps.io/actuator/health
+eureka.instance.home-page-url=http://offer-api.cfapps.io/offers
